# libansnd

./: .gitignore  CMakeLists.txt  Catnip.cmake  LICENSE.md  README.md
examples/: CMakeLists.txt
examples/example_pitch/: CMakeLists.txt
examples/example_pitch/src/: main.c
examples/example_pitch_adpcm/: CMakeLists.txt
examples/example_pitch_adpcm/data/: C4L.dsp  C4R.dsp
examples/example_pitch_adpcm/src/: main.c
examples/example_simple_looping/: CMakeLists.txt
examples/example_simple_looping/src/: main.c
examples/example_simple_playback/: CMakeLists.txt
examples/example_simple_playback/src/: main.c
examples/example_state_callback/: CMakeLists.txt
examples/example_state_callback/src/: main.c
examples/example_streaming/: CMakeLists.txt
examples/example_streaming/src/: main.c
include/: ansndlib.h
src/: ansndlib.c  dspmixer.s
